--- a/vignettes/flows.Rmd
+++ b/vignettes/flows.Rmd
@@ -77,7 +77,7 @@ nav <- read.csv(system.file("csv/nav.csv", package = "flows"))
 head(nav, 4)
 # Prepare data
 mat <- prepare_mat(x = nav, i = "i", j = "j", fij = "fij")
-mat[1:4,1:4]
+mat[1:4, 1:4]
 ```
 
 
@@ -129,7 +129,6 @@ mystats <- stat_mat(mat = mat, output = "none", verbose = FALSE)
 str(mystats)
 # Sum of flows
 mystats$sumflows
-
 ```
 
 To ease comparisons, the `comp_mat()` function returns a data.frame that provides statistics on differences between two matrices (for example a matrix and selection of this matrix).
@@ -168,15 +167,14 @@ The following example selects flows that represent at least 20% of the sum of ou
 
 ```{r, fig.height = 6, fig.width=6}
 # Percentage of each outgoing flows
-mat_p <- mat  / rowSums(mat) * 100
+mat_p <- mat / rowSums(mat) * 100
 
-# Select flows that represent at least 20% of the sum of outgoing flows for 
+# Select flows that represent at least 20% of the sum of outgoing flows for
 # each urban area.
 mat_p_sel <- select_flows(mat = mat_p, method = "xfirst", k = 20)
 
 # Compare initial and selected matrices
 compare_mat(mat1 = mat, mat2 = mat * mat_p_sel, digits = 2)
-
 ```
 
 This selection keeps only 8% of all links and 53% of the flows volume. 
@@ -195,22 +193,27 @@ This analysis keeps 4% of all links and 4% of the flows volume.
 ```{r, fig.height=5.77, fig.width=6, eval = TRUE}
 library(sf)
 library(mapsf)
-UA <- st_read(system.file("gpkg/GE.gpkg", package = "flows"), 
-              layer = "urban_area", quiet = TRUE)
-GE <- st_read(system.file("gpkg/GE.gpkg", package = "flows"), 
-              layer = "region", quiet = TRUE)
+UA <- st_read(system.file("gpkg/GE.gpkg", package = "flows"),
+  layer = "urban_area", quiet = TRUE
+)
+GE <- st_read(system.file("gpkg/GE.gpkg", package = "flows"),
+  layer = "region", quiet = TRUE
+)
 mf_map(GE, col = "#c6deba", border = NA, expandBB = c(0, 0, 0, .25))
-out <- map_nodal_flows(mat = mat, x = UA,
-                       col_node = c('red', 'orange', 'yellow'),
-                       col_flow = "grey30",
-                       leg_pos_node = "topright", 
-                       leg_pos_flow = "right",
-                       leg_flow = "Nb. of commuters",
-                       breaks = c(4,100,1000,2500,8655),
-                       lwd = c(1,4,8,16), add = TRUE)
-mf_label(out$nodes[out$nodes$w>6000,], 
-         var = 'name',
-         halo = TRUE, overlap = FALSE)
+out <- map_nodal_flows(
+  mat = mat, x = UA,
+  col_node = c("red", "orange", "yellow"),
+  col_flow = "grey30",
+  leg_pos_node = "topright",
+  leg_pos_flow = "right",
+  leg_flow = "Nb. of commuters",
+  breaks = c(4, 100, 1000, 2500, 8655),
+  lwd = c(1, 4, 8, 16), add = TRUE
+)
+mf_label(out$nodes[out$nodes$w > 6000, ],
+  var = "name",
+  halo = TRUE, overlap = FALSE
+)
 mf_title("Dominant Flows of Commuters")
 mf_credits("INSEE, 2011")
 mf_scale()
